--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <div class="row"> 
    <div class="col-lg-6">
       <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+      <button href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+      <button href="awkward.html" type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
    </div>
     <div class="col-lg-6">
       <img class="phone-logo" src="images/iphone6.png" alt="iphone-mockup">
@@ -146,7 +146,7 @@
     <p>5 Matches Per Day</p>
     <p>10 Messages Per Day</p>
     <p>Unlimited App Usage</p>
-    <button type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
+    <button href="awkward.html" type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
 	</div>
     </div>
 </div>
@@ -160,7 +160,7 @@
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
-    <button type="button" class="btn btn-dark btn-block">Sign Up</button>
+    <button href="awkward.html" type="button" class="btn btn-dark btn-block">Sign Up</button>
 	</div>
     </div>
 </div>
@@ -175,7 +175,7 @@
     	 <p>Unlimited Matches</p>
     	 <p>Unlimited Messages</p>
    	 <p>Unlimited App Usage</p>
-    <button type="button" class="btn btn-dark btn-block">Sign Up</button>
+    <button href="awkward.html" type="button" class="btn btn-dark btn-block">Sign Up</button>
    	</div>
    </div>
  </div>
@@ -189,8 +189,8 @@
   <section id="cta">
 
     <h3 class="cta-line">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+    <button href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+    <button href="awkward.html" type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -199,7 +199,7 @@
 
   <footer id="footer">
 	<div class="social-icons">	
-		<a class="social-links"href="#"><i class="socials fab fa-twitter"></i></a><a class="social-links"href="#"><i class="socials fab fa-facebook-f"></i></a><a class="social-links"href="#"><i class="socials fab fa-instagram"></i></a><a class="social-links"href="#"><i class="socials fas fa-envelope"></i></a>
+		<a class="social-links"href="href="awkward.html" "><i class="socials fab fa-twitter"></i></a><a class="social-links"href="href="awkward.html" "><i class="socials fab fa-facebook-f"></i></a><a class="social-links"href="href="awkward.html" "><i class="socials fab fa-instagram"></i></a><a class="social-links"href="href="awkward.html" "><i class="socials fas fa-envelope"></i></a>
 	</div>
     <p>© Copyright 2018 TinDog</p>
 
