--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <div class="row"> 
    <div class="col-lg-6">
       <h1>Meet new and interesting dogs nearby.</h1>
-      <button href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-      <button href="awkward.html" type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+      <a href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</a>
+      <a href="awkward.html" type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</a>
    </div>
     <div class="col-lg-6">
       <img class="phone-logo" src="images/iphone6.png" alt="iphone-mockup">
