--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>TinDog</title>
 	<!-- Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-  
+
 	<!-- Style Sheets-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
 	<!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/fe8c43f7ca.js" crossorigin="anonymous"></script>
-  
+
 	<!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -49,7 +49,7 @@
 
     <!-- Title -->
 
-  <div class="row"> 
+  <div class="row">
    <div class="col-lg-6">
       <h1>Meet new and interesting dogs nearby.</h1>
       <a href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</a>
@@ -67,7 +67,7 @@
   <!-- Features -->
 
   <section id="features-section">
-<div class="row"> 
+<div class="row">
    <div class="features col-lg-4">
     <i class="feature-logo fas fa-check-circle"></i>
     <h3>Easy to use.</h3>
@@ -146,7 +146,7 @@
     <p>5 Matches Per Day</p>
     <p>10 Messages Per Day</p>
     <p>Unlimited App Usage</p>
-    <button href="awkward.html" type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
+    <a href="awkward.html" type="button" class="btn btn-outline-dark btn-block">Sign Up</a>
 	</div>
     </div>
 </div>
@@ -160,7 +160,7 @@
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
-    <button href="awkward.html" type="button" class="btn btn-dark btn-block">Sign Up</button>
+    <a href="awkward.html" type="button" class="btn btn-dark btn-block">Sign Up</a>
 	</div>
     </div>
 </div>
@@ -175,7 +175,7 @@
     	 <p>Unlimited Matches</p>
     	 <p>Unlimited Messages</p>
    	 <p>Unlimited App Usage</p>
-    <button href="awkward.html" type="button" class="btn btn-dark btn-block">Sign Up</button>
+    <a href="awkward.html" type="button" class="btn btn-dark btn-block">Sign Up</a>
    	</div>
    </div>
  </div>
@@ -189,8 +189,8 @@
   <section id="cta">
 
     <h3 class="cta-line">Find the True Love of Your Dog's Life Today.</h3>
-    <button href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-    <button href="awkward.html" type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+    <a href="awkward.html" type="button" class="download btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</a>
+  <a href="awkward.html" type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</a>
 
   </section>
 
@@ -198,8 +198,8 @@
   <!-- Footer -->
 
   <footer id="footer">
-	<div class="social-icons">	
-		<a class="social-links"href="href="awkward.html" "><i class="socials fab fa-twitter"></i></a><a class="social-links"href="href="awkward.html" "><i class="socials fab fa-facebook-f"></i></a><a class="social-links"href="href="awkward.html" "><i class="socials fab fa-instagram"></i></a><a class="social-links"href="href="awkward.html" "><i class="socials fas fa-envelope"></i></a>
+	<div class="social-icons">
+		<a class="social-links" href="awkward.html"><i class="socials fab fa-twitter"></i></a><a class="social-links" href="awkward.html"><i class="socials fab fa-facebook-f"></i></a><a class="social-links" href="awkward.html"><i class="socials fab fa-instagram"></i></a><a class="social-links" href="awkward.html"><i class="socials fas fa-envelope"></i></a>
 	</div>
     <p>© Copyright 2018 TinDog</p>
 
