--- a/awkward.html
+++ b/awkward.html
@@ -5,9 +5,12 @@
    <link rel="stylesheet" href="styles.css">
     <title>Well This is Awkward</title>
   </head>
-  <body style="backgroun-color=#000;">
+  <body style="background-color: #000;">
 
-    <h3>Sorry, but this product isn't real....Wait were you really going to sign up for this??</h3>
-    <a href="awkward.jpg"></a>
+    <h3 style="color:#fff;">Sorry, but this product isn't real....Wait were you really going to sign up for this??</h3>
+<div class="">
+  <img src="awkward.jpg" alt="Awkward-Dog">
+</div>
+
   </body>
 </html>
